[package]
name = "automata_core"
version = "0.1.3"
edition = "2024"
rust-version = "1.85.0"

description = "Deterministic and nondeterministic finite-automata algorithms in Rust"
license = "MIT OR Apache-2.0"

readme = "README.md"
homepage = "https://github.com/maxvog2020/rust_automata"
repository = "https://github.com/maxvog2020/rust_automata"

keywords = ["automata", "dfa", "nfa", "formal-languages", "algorithms"]
categories = ["algorithms"]

[dependencies]
