[package]
name = "automata_core"
version = "0.1.5"
edition = "2024"
rust-version = "1.85.0"

description = "Deterministic and nondeterministic automata algorithms in Rust"
license = "MIT OR Apache-2.0"

readme = "README.md"
homepage = "https://github.com/maxvog2020/rust_automata"
repository = "https://github.com/maxvog2020/rust_automata"

keywords = ["automata", "dfa", "nfa", "formal-languages", "algorithms"]
categories = ["algorithms"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "finite_parsing"
harness = false
